name:                concurrent-world
version:             0.1.0.0
synopsis:            A concurrent sample with modularity by continuations
description:         Please see README.md
homepage:            http://github.com/ruicc/concurrent-world
license:             BSD3
license-file:        LICENSE
author:              Kousuke Ruichi
maintainer:          ruicc.rail@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , mtl
                     , lens

                     , bytestring
                     , text
                     , unix-time
                     , network
  default-language:    Haskell2010

executable main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -ddump-simpl -dsuppress-coercions -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , mtl
                     , lens

                     , bytestring
                     , text
                     , unix-time
                     , network

                     , concurrent-world
  default-language:    Haskell2010

test-suite testings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , concurrent-world
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ruicc/concurrent-world
